2010-06-29  Roland McGrath  <roland@redhat.com>

	* derelocate.c (check_module): Don't call dwfl_module_getdwarf.

	* dwfl_module_getdwarf.c (__libdwfl_relocate_setup): New function.
	(load_dw): Set MOD->dw->relocate->dwflmod.
	* dwfl_module.c (__libdwfl_module_free): Clear MOD->dw->relocate->ebl
	if we set it.
	* relocate.c (__libdw_relocate_shndx): New function.
	(__libdwfl_relocate_symbol): New function.

	* libdwflP.h (struct dwfl_file): Add member shstrndx.
	* dwfl_module_getdwarf.c (open_elf): Set it.
	* dwfl_report_elf.c (__libdwfl_report_elf): Likewise.
	* derelocate.c (cache_sections): Use it.
	* dwfl_module_getsym.c: Likewise.

	* dwfl_lineinfo.c: Use dwarf_lineaddr.

	* relocate.c (relocate_section): Remove PARTIAL flag argument.
	Reverse sense of DEBUGSCN flag: if set, skip if target section
	is a debugging section.
	(__libdwfl_relocate): Update caller.  Remove flag argument.
	(__libdwfl_relocate_section): Likewise.
	* libdwflP.h: Update decls.
	* dwfl_module_getelf.c: Update caller.
	* dwfl_module_getdwarf.c: Likewise.

	* dwfl_module_getdwarf.c (load_dw): Don't relocate here.
	Instead, hook into MOD->dw->relocate after dwarf_begin_elf.

2010-06-21  Roland McGrath  <roland@redhat.com>

	* open.c (__libdw_open_file): Close the fd when it's already mapped.

	* dwfl_module_getsrc_file.: Update for Dwarf_Line member change.
	* dwfl_lineinfo.c: Likewise.  Use dwarf_lineaddr.

2010-06-20  Roland McGrath  <roland@redhat.com>

	* relocate.c (struct reloc_symtab_cache): New members
	rel8_types and rel4_types.
	(relocate_section): Use ebl_reloc_simple_types instead of old
	ebl_reloc_simple_type.  Handle only 4 and 8 byte quantities,
	and don't use gelf_xlatetom.

2010-06-30  Roland McGrath  <roland@redhat.com>

	* linux-kernel-modules.c (dwfl_linux_kernel_find_elf): Don't be
	confused by -1 return from dwfl_build_id_find_elf after it opened
	the Elf handle.

2010-06-16  Roland McGrath  <roland@redhat.com>
