@@ -1,3 +1,8 @@
+2010-06-30  Roland McGrath  <roland@redhat.com>
+
+	* relocate.c (relocate_section): Check for bad reloc type before
+	looking up symndx.
+
 2010-06-29  Roland McGrath  <roland@redhat.com>
 
 	* derelocate.c (check_module): Don't call dwfl_module_getdwarf.
